--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -384,7 +384,7 @@
             </tr>
             <tr>
             <td>
-            <p><span class="wb-inv">Keywords: Province of employment outside Canada</span> Enter ZZ if an employee worked in a country <strong>other than Canada or the United States</strong>, or if the employee worked in Canada beyond the limits of a province or territory (for example, on an offshore oil rig).</p>
+            <p id="bx_10_cd_16"><span class="wb-inv">Keywords: Province of employment outside Canada</span> Enter ZZ if an employee worked in a country <strong>other than Canada or the United States</strong>, or if the employee worked in Canada beyond the limits of a province or territory (for example, on an offshore oil rig).</p>
             </td>
             <td>
             <p>ZZ</p>
@@ -456,7 +456,7 @@
 </li>
 	
 	
-<li class="code-num mrgn-lft-md"><details> <summary>Box 29 – Employment code <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num mrgn-lft-md"><details> <summary>Box 29 – Employment code </summary>
             <p id="bx_29">Enter the appropriate employment code in box 29 if one of the following situations applies. Otherwise, leave it blank.</p>
 
   <details><summary>11 - Placement or employment agency workers</summary>
@@ -475,7 +475,7 @@
 <ul class="list-unstyled cnjnctn-type-and">
            <li class="cnjnctn-col">You placed the worker under your direction and control of one of your clients</li>
 	 <li class="cnjnctn-col">You pay the worker</li>
-          
+   </ul>       
   <p><strong>Do not</strong> use code 11 if you are an agency or the agency's client and the worker is paid self-employment income, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a>.</p>
 </li>
 </ul>
@@ -514,22 +514,24 @@
 
 <details><summary>15 - Seasonal Agricultural Workers Program</summary>
             <div id="ajax-agri1">
-              <p>Use code 15 if the worker meets all conditions to be a foreign workers employed in Canada under the Seasonal Agricultural Workers Program.</p>
+              <p>Use code 15 if the worker meets all conditions to be a foreign worker employed in Canada under the Seasonal Agricultural Workers Program.</p>
              <p id="bx_29_cd_15">Learn more: <a href="/cra-arc/payroll/calculate/payment/agriculture.html">Payments to agriculture and horticulture workers</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/payroll-deductions-contributions/special-situations/seasonal-agricultural-workers-program.html">Seasonal Agricultural Workers Program</a></p>
             </div>
             </details>
 
   <details> <summary>16 - Detached employee – Social security agreement</summary>
             <div id="ajax-outside1">
-            <p id="bx_29_cd_16">Use code 16 if enter in <a href="#bx_10">box 10</a> that your employee worked in a <strong>country other than Canada</strong> using abbreviations US or ZZ, <strong>for all or part of the year</strong>.</p>
+            <p id="bx_29_cd_16">Use code 16 if your employee is considered detached <strong>and</strong> you entered in <a href="#bx_10_cd_16">box 10</a> that your employee worked in a <strong>country other than Canada</strong> using abbreviations US or ZZ, <strong>for all or part of the year</strong>.</p>
+<p> A detachment is when an employee is temporarily assigned, posted, or seconded to another country for a specific period of time. A worker is not considered detached if they have been permanently transferred or appointed to a position in another country</p>
+
            <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/employee-outcanada.html">Employee who is working outside Canada for a Canadian company or the Canadian government</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-7.html">Employment outside Canada - CPP/EI explained</a></p>
             </div>
             </details>
 
      <details><summary>17 - Self-employed fishing income</summary>
                <div id="ajax-fish1">
-                  <p id="bx_29_cd_17">Use code 17 if the worker meets all conditions to be a self-employed fisher.</p>
-                 <p> If you paid self-employment income to a person who is registered, or entitled to be registered under the Indian Act who is a self-employed fisher, use code 17.</p>       
+                  <p id="bx_29_cd_17">Use code 17 if the worker meets all conditions to be a self-employed fisher. This includes if the person you paid is registered, or entitled to be registered under the Indian Act.</p>
+                   
                   <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fishers.html">Payments to fishers</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-5.html">Fishers - CPP/EI explained</a></p>
 </div></details>
 
