--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -433,8 +433,8 @@
 <li>An amount greater than "0" using boxes <a href="#bx_16">16</a>, <a href="#bx_16a">16a</a>, <a href="#bx_17">17</a>, <a href="#bx_17a">17a</a> or <a href="#bx_26">26</a> </li>
 <li>Reported "0" in <a href="#bx_26">box 26</a> and the employee gave you a copy of a filled out Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election </li>
 </ul>
-<br>
-<p>Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if one of the following apply:</p>
+
+<p class="mrgn-tp-md">Enter an "X" or a check mark under <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> if one of the following apply:</p>
 <ul><li>You <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Canada Pension Plan">CPP</abbr> or <abbr title="Quebec Pension Plan">QPP</abbr> contributions for the <strong>full</strong> reporting period</li>
 <li>You enter an employment code using <a href="#bx_29">box 29</a></li>
 </ul>
@@ -442,12 +442,12 @@
 
 <dt><abbr title="Employment insurance">EI</abbr></dt>
 <dd><p><strong>Do not</strong> use box 28 if you report <abbr title="Employment insurance">EI</abbr> premiums deducted using <a href="#bx_18">box 18</a> or <abbr title="Employment insurance">EI</abbr> insurable earnings using <a href="#bx_24">box 24</a>.</p>
-<p>Enter an "X" or a check mark under <abbr title="Employment insurance">EI</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Employment insurance">EI</abbr> premiums for the <strong>full</strong> reporting period.</p>
+<p class="mrgn-tp-md">Enter an "X" or a check mark under <abbr title="Employment insurance">EI</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Employment insurance">EI</abbr> premiums for the <strong>full</strong> reporting period.</p>
 </dd>
 
 <dt><abbr title="Provincial parental insurance plan">PPIP</abbr></dt>
 <dd><p><strong>Do not</strong> use box 28 if you report <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums using <a href="#bx_55">box 55</a> or <abbr title="Provincial parental insurance plan">PPIP</abbr> insurable earnings using <a href="#bx_56">box 56</a>.</p>
-<p>Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums for the <strong>full</strong> reporting period.</p>
+<p class="mrgn-tp-md">Enter an "X" or a check mark under <abbr title="Provincial parental insurance plan">PPIP</abbr> if you <strong>do not</strong> report any amount because you did not have to deduct <abbr title="Provincial parental insurance plan">PPIP</abbr> premiums for the <strong>full</strong> reporting period.</p>
 </dd>
 
 </dl>
@@ -476,7 +476,7 @@
            <li class="cnjnctn-col">You placed the worker under your direction and control of one of your clients</li>
 	 <li class="cnjnctn-col">You pay the worker</li>
    </ul>       
-  <p><strong>Do not</strong> use code 11 if you are an agency or the agency's client and the worker is paid self-employment income, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a>.</p>
+  <p class="mrgn-tp-md"><strong>Do not</strong> use code 11 if you are an agency or the agency's client and the worker is paid self-employment income, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a>.</p>
 </li>
 </ul>
             <p class="mrgn-tp-md">Learn more: <a href="/cra-arc/payroll/calculate/payment/temp-help.html">Payments to employee of an employment agency (temporary-help)</a> and <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/placement-employment-agencies.html">Placement/employment agencies - CPP/EI explained</a></p>
