--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -623,9 +623,9 @@
 <dt>Retiring allowances</dt>
 <dd> <p><strong>Do not </strong>report retiring allowances using box 14:</p>
 <ul>
-	<li>use <a href="#cd_66">code 66</a> to report eligible retiring allowances </li>
-	<li>use <a href="#cd_67">code 67</a> to report non-eligible retiring allowances</li>
-	<li>use <a href="#cd_69">code 69</a> to report tax-exempt non-eligible retiring allowances paid to your employee who is registered, or entitled to be registered under the Indian Act </li>
+	<li>Use <a href="#cd_66">code 66</a> to report eligible retiring allowances </li>
+	<li>Use <a href="#cd_67">code 67</a> to report non-eligible retiring allowances</li>
+	<li>Use <a href="#cd_69">code 69</a> to report tax-exempt non-eligible retiring allowances paid to your employee who is registered, or entitled to be registered under the Indian Act </li>
 	
 </ul>
 </dd>
@@ -679,12 +679,11 @@
 <dd><strong>Do not </strong>report any amount using box 14 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span></a> <strong>and no other type of income is reported on the T4 slip</strong>. </dd>
 
 <dt>Employee salary overpayments</dt>
-<dd><p>Report salary overpayments you made to your employees using box 14 if your employee <strong>does not</strong>strong> repay you.</p>
+<dd><p>Report salary overpayments you made to your employees using box 14 if your employee <strong>does not</strong> repay you.</p>
 <p><strong>Do not</strong> report any amount using box 14 if the employee <strong>did not</strong> perform their duties.</p>
 <p>Learn more when on how to make corrections when the employee repays you: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html">Make corrections after filing</a></p>
 </dd>
 </dl>   
-
 <p>Learn more:</p>
 <ul> 
 <li><a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></li>
@@ -733,9 +732,8 @@
 <dd> <p><strong>Do not</strong> report <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions using box 16, use <a href="#bx_16a">box 16a</a>.</p>
      </dd>
 
-<div id="ajax-over16">
 <dt>Over deductions (overpayment)</dt>
-<dd><p>Report the <strong>total</strong> <abbr title="Canada Pension Plan">CPP</abbr> deductions using this box <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+<dd><p>Report the <strong>total</strong> <abbr title="Canada Pension Plan">CPP</abbr> deductions using box 16 <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Canada Pension Plan">CPP</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
             <p>Learn more if you over deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
@@ -744,14 +742,13 @@
   </dd>
 
 <dt>Under deductions (recovering)</dt>
-<dd><p><strong>Do not </strong>report any recovered amount using this box if you under deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions.</p>
+<dd><p><strong>Do not </strong>report any recovered amount using box 16 if you under deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions.</p>
             <p>Learn more if you under deducted <abbr title="Canada Pension Plan">CPP</abbr> contributions:</p> 
   <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
 <li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
 <br>
         </ul>
   </dd>
- </div>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p> Report amounts you deducted for your employee's share of the <abbr title="Canada Pension Plan">CPP</abbr> contributions using box 16. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
@@ -794,7 +791,23 @@
 <dd> <p><strong>Do not </strong>report any amount using box 16a if your employee has not reached the first maximum earnings ceiling, use <a href="#bx_16">box 16</a>.</p>
      </dd>
 
-<div data-ajax-replace="#ajax-over16"></div>
+<dt>Over deductions (overpayment)</dt>
+<dd><p>Report the <strong>total</strong> <abbr title="Second Canada Pension Plan">CPP2</abbr> deductions using box 16a <strong>and</strong> the correct pensionable earnings using <a href="#bx_26">box 26</a> if you overdeducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions (overpayment) from your employee and <strong>did not reimburse them</strong>.</p>
+            <p>Learn more if you over deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions:</p> 
+  <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> if you reimbursed them</li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-1">Make corrections after filing</a> </li>
+        </ul>
+<br>
+  </dd>
+
+<dt>Under deductions (recovering)</dt>
+<dd><p><strong>Do not </strong>report any recovered amount using box 16a if you under deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions.</p>
+            <p>Learn more if you under deducted <abbr title="Second Canada Pension Plan">CPP2</abbr> contributions:</p> 
+  <ul> <li><a href="/cra-arc/payroll/calculate/corrections/index.html">Make corrections before filing</a> </li>
+<li><a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html#h-3">Make corrections after filing</a> </li>
+<br>
+        </ul>
+  </dd>
 
 </dl>
 <p>If required, the CRA may need to update the instructions during 2023. </p>
@@ -1174,7 +1187,7 @@
 <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Union issuing receipts</dt>
-<dd><p><strong>Do not</strong> report union dues deductions using box 44 if you and the union do not have an agreement that the union will </strong>not</strong> issue receipts. The union will have to issue receipts for the employee to claim the income tax deduction. </p></dd>
+<dd><p><strong>Do not</strong> report union dues deductions using box 44 if you and the union do not have an agreement that the union will <strong>not</strong> issue receipts. The union will have to issue receipts for the employee to claim the income tax deduction. </p></dd>
 <dt>Initiation fees </dt>
 <dd><p><strong>Do not</strong> report initiation fees using box 44. </p></dd>
 <dt>Strike pay</dt>
@@ -1418,7 +1431,7 @@
 <li>The shareperson amount if the fisher is a type 2 using <a href="#cd_80">code 80</a> </li>
 </ul>
 
-<p <p class="mrgn-tp-md"><strong>Do not </strong>report this amount in box 14.</p>  
+<p class="mrgn-tp-md"><strong>Do not </strong>report this amount in box 14.</p>  
           
             </details> 
 			</li>
