--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -899,6 +899,11 @@
 <p>For example, if your employee is on an unpaid leave of absence and you continue to provide benefits during the leave period, report the benefit using box 26.</p>
 </dd>
 
+<dt>Start, stop or restart CPP deductions</dt>
+<dd><p> </p>
+<p></p>
+</dd>
+
 <dt>Benefits and earnings taxable only in the Quebec</dt>
 <dd><p>Certain taxable benefits and earnings are considered by Revenu Québec to be pensionable earnings for employees working in Quebec.</p>
  <p>Generally, the amount you report using box 26 will be more than the amount you report using box 14 in this situation. The T4 slip will still be processed even though box 26 is more than box 14.</p>
