--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -900,8 +900,9 @@
 </dd>
 
 <dt>Start, stop or restart CPP deductions</dt>
-<dd><p> </p>
-<p></p>
+<dd><p>Report using box 26 in the following situations:</p>
+ <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/when/learncpp.html#ajax-stopcppcond"></div></p>
+<p><p><strong>Do not </strong> change the amount you report using box 14. The amounts above need to be reported using box 14.</p>
 </dd>
 
 <dt>Benefits and earnings taxable only in the Quebec</dt>
