--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -907,7 +907,7 @@
 
 <dt>Benefits and earnings taxable only in the Quebec</dt>
 <dd><p>Certain taxable benefits and earnings are considered by Revenu Québec to be pensionable earnings for employees working in Quebec.</p>
- <p>Generally, the amount you report using box 26 will be more than the amount you report using box 14 in this situation. The T4 slip will still be processed even though box 26 is more than box 14.</p>
+ <p>Generally, the amount you report using box 26 will be more than the amount you report using box 14 in this situation. The CRA will process the T4 slip even if the amount is not the same.</p>
            
             <details><summary>Example 1 - Benefit taxable in Quebec - Unpaid leave</summary>
             <p>Marion works for her employer in Quebec and is on an unpaid leave of absence. Her employer pays $750 in premiums to an employer-paid private health benefit plan on her behalf. Since the benefit is not taxable outside of Quebec, it is not income. When preparing Marion's Quebec T4 slip, her employer will leave box 14 blank. Since the premiums are QPP pensionable, her employer will report $750 in box 26, the QPP contributions withheld on the benefit in box 17, and fill in any other boxes on her T4 slip as applicable.</p>
@@ -918,7 +918,7 @@
 		    <details><summary>Example 3 - Benefit taxable in Quebec and federally</summary>
             <p>Stephane works for his employer in Quebec and did not receive any cash earnings. However, his employer gave him a non-cash housing benefit valued at $1,100. When preparing Stephane's Quebec T4 slip, his employer will report $1,100 in boxes 14 and 26, and fill in any other boxes on his T4 slip as applicable.</p>
         </details> 
- <p>Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
+ <p class="mrgn-tp-md">Learn more: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/">Source Deductions and Employer Contributions | Revenu Québec</a></p>
 
 </dd>
 
