--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -175,12 +175,12 @@
            
             <p>You have to prorate the maximum CPP contribution in the following situations:</p>
         <div id="ajax-stopcppcond">
-	 <ul class="list-unstyled cnjnctn-type-or">
-               <li class="cnjnctn-col">Employee turns 18 in the year </li>
-               <li class="cnjnctn-col">Employee turns 70 in the year </li>
-              <li class="cnjnctn-col">Employee gives you a completed Form CPT30 during the year</li>
-               <li class="cnjnctn-col">Employee is considered to be disabled under the CPP in the year</li>
-               <li class="cnjnctn-col">Employee dies in the year </li>
+	 <ul>
+               <li >Employee turns 18 in the year </li>
+               <li >Employee turns 70 in the year </li>
+              <li >Employee gives you a completed Form CPT30 during the year</li>
+               <li >Employee is considered to be disabled under the CPP in the year</li>
+               <li >Employee dies in the year </li>
             </ul>
  </div>
  <p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/canada-pension-plan-cpp-employment-insurance-ei-rulings/cpp-ei-explained/canada-pension-plan-employment-insurance-explained-10.html">Pensionable and insurable earnings - CPP/EI explained</a> </p>        
