--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -902,7 +902,7 @@
 <dt>Start, stop or restart CPP deductions</dt>
 <dd><p>Report using box 26 in the following situations:</p>
  <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/when/learncpp.html#ajax-stopcppcond"></div></p>
-<p><p><strong>Do not </strong> change the amount you report using box 14. The amounts above need to be reported using box 14.</p>
+<p><p><strong>Do not </strong> report using box 26 if you paid your employees and they are not in the above situations. These amounts are not pensionable earnings. You have to report these amounts using box 14.</p>
 </dd>
 
 <dt>Benefits and earnings taxable only in the Quebec</dt>
