--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -903,6 +903,8 @@
 <dd><p>Report using box 26 in the following situations:</p>
  <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/when/learncpp.html#ajax-stopcppcond"></div></p>
 <p><p><strong>Do not </strong> report using box 26 if you paid your employees and they are not in the above situations. These amounts are not pensionable earnings. You have to report these amounts using box 14.</p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/payment/startstopcpp.html">Employee's life events: Start, stop or restart CPP deductions</a></p>      
+
 </dd>
 
 <dt>Benefits and earnings taxable only in the Quebec</dt>
