--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -876,7 +876,7 @@
 </details>           
         </li>
 
-<li class="code-num mrgn-lft-md"><details> <summary >Box 26 – CPP/QPP pensionable earnings <span class="label label-info">Jeremiah</span></summary>
+<li class="code-num mrgn-lft-md"><details> <summary >Box 26 – CPP/QPP pensionable earnings </summary>
  <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings and additional maximum pensionable earnings for the year.</p>
             <p>Report "0" if the employee had no pensionable earnings and you did not report an amount in boxes 16, 16a, 17 or 17a.</p>
 		<p>In many situations, boxes 14 and 26 will be the same amount.</p>
@@ -1108,7 +1108,7 @@
 
 <dt><abbr title="Retirement compensation arrangement">RCA</abbr> </dt>
 <dd><p>Report the amount if the employee contributed to a <abbr title="Retirement compensation arrangement">RCA</abbr> using box 20.</p>
-<p><strong>Do not</strong> report amounts that are not deductable.</p>
+<p><strong>Do not</strong> report amounts that are not deductible.</p>
 
 <p>You <strong>have</strong> to attach a letter informing the employee of the amounts you reported if the amount in box 20 includes <abbr title="registered pension plan">RPP</abbr> and <abbr title="Retirement compensation arrangement">RCA</abbr> contributions.</p>
 </dd>
@@ -1221,7 +1221,7 @@
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Partly provided in a prescribed zone</dt>
-<dd>Report the tax-exempt part of the benefit using code 31 <strong>and</strong> the value of the board and lodging benefit that is not considered provided in a prescribed zone using <a href="#cd_30">code 30</a>.</dd>
+<dd>Report the part of the benefit provided in a prescribed zone using code 31 <strong>and</strong> the value of the board and lodging benefit that is not considered provided in a prescribed zone using <a href="#cd_30">code 30</a>.</dd>
 </dl>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
             </details> 
