--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -292,7 +292,7 @@
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
-   <h4>Identification </h4>
+   <h4 class="code-num">Identification </h4>
 
    <li class="code-num mrgn-lft-md">	<details><summary >Year </summary>
             <p id="yr">Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
@@ -580,7 +580,7 @@
 		</li>
 		
 
-   <h4>Income and deduction </h4>
+   <h4 class="code-num">Income and deduction </h4>
 	<li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income </summary>
             <p id="bx_14">Report your employee's total income before deductions using box 14. </p>
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
@@ -711,7 +711,7 @@
             </details>
 </li>
 
-<h4><abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Quebec Pension Plan">QPP</abbr> and <abbr title="Provincial parental insurance plan">PPIP</abbr></h4>
+<h4 class="code-num"><abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Quebec Pension Plan">QPP</abbr> and <abbr title="Provincial parental insurance plan">PPIP</abbr></h4>
 		
 <li class="code-num mrgn-lft-md"><details><summary>Box 16 – Employee's CPP contributions </summary>
 	   <p id="bx_16">Report amounts you deducted for your employee's share of the Canada Pension Plan (<abbr title="Canada Pension Plan">CPP</abbr>) contributions using box 16 if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment other than Quebec. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
@@ -984,7 +984,7 @@
             </details>
 </li>
 
-<h4><abbr title="Employment insurance">EI</abbr></h4>
+<h4 class="code-num"><abbr title="Employment insurance">EI</abbr></h4>
 
 <li class="code-num mrgn-lft-md"><details><summary>Box 18 – Employee's EI premiums </summary>
             <p id="bx_18">Report amounts you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
@@ -1083,7 +1083,7 @@
             </details>
 </li>
 
-<h4><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> </h4>
+<h4 class="code-num"><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> </h4>
 
 <li class="code-num mrgn-lft-md">  <details><summary >Box 20 – RPP contributions </summary>
 <p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) using box 20. </p>
@@ -1166,7 +1166,7 @@
             </details>
 </li>
 
-<h4>Union dues or charitable donations</h4>
+<h4 class="code-num">Union dues or charitable donations</h4>
 <li class="code-num mrgn-lft-md"><details> <summary>Box 44 – Union dues </summary>
             <p id="bx_44"></p>
             <p>Report the amount you deducted from your employee for tax deductible union dues using box 44, only if you and the union agree that the union will not issue receipts for these dues. This includes amounts you paid to a parity or advisory committee that qualify for a deduction. </p>
@@ -1196,7 +1196,7 @@
 		
 
 	
-<h4>Codes - Other information </h4>		
+<h4 class="code-num">Codes - Other information </h4>		
  
  <li class="code-num mrgn-lft-md"><details><summary>Code 30 – Board and lodging </summary> 
             <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14_cd_30">box 14</a>.</p>
