--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -580,8 +580,10 @@
 		</li>
 		
 
-   <h4 class="code-num">Income and deduction </h4>
-	<li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income </summary>
+   <h4 class="code-num">Income and source deductions</h4>
+	
+
+<li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income </summary>
             <p id="bx_14">Report your employee's total income before deductions using box 14. </p>
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
  <details> <summary>Type of payment included in employment income </summary>
@@ -691,27 +693,6 @@
 </ul>
             </details>
 </li>
-
-<li class="code-num mrgn-lft-md">
-	<details>
-            <summary id="bx_22">Box 22 – Income tax deducted </summary>
-<p>Report the amount of income tax you deducted from your employee using box 22. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
-
- <h4>Specific situations</h4>
-<dl class="dl-horizontal">
-
-<dt>No deductions</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 22 if you <strong>did not</strong> deduct income tax.</p></dd>
-
-<dt>Authority of a garnishee or a requirement to pay</dt>
-<dd> <p><strong>Do not </strong>report any amount using box 22 if you withheld under the authority of a garnishee or a requirement to pay that applies to the employee's previously assessed tax arrears.</p></dd>
-</dl>
-    
-<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnit.html">About the deduction of income tax</a></p>
-            </details>
-</li>
-
-<h4 class="code-num"><abbr title="Canada Pension Plan">CPP</abbr>, <abbr title="Quebec Pension Plan">QPP</abbr> and <abbr title="Provincial parental insurance plan">PPIP</abbr></h4>
 		
 <li class="code-num mrgn-lft-md"><details><summary>Box 16 – Employee's CPP contributions </summary>
 	   <p id="bx_16">Report amounts you deducted for your employee's share of the Canada Pension Plan (<abbr title="Canada Pension Plan">CPP</abbr>) contributions using box 16 if you enter in <a href="#bx_10">box 10</a> that your employee had a province of employment other than Quebec. If you report an amount in box 16, you have to report pensionable earnings using <a href="#bx_26">box 26</a>. </p>
@@ -875,6 +856,26 @@
 <p>Learn more: <a href="/cra-arc/payroll/calculate/when/learncpp.html">About the deduction of Canada Pension Plan (CPP) contributions</a></p>  
 </details>           
         </li>
+
+<li class="code-num mrgn-lft-md">
+	<details>
+            <summary id="bx_22">Box 22 – Income tax deducted </summary>
+<p>Report the amount of income tax you deducted from your employee using box 22. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
+
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+
+<dt>No deductions</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 22 if you <strong>did not</strong> deduct income tax.</p></dd>
+
+<dt>Authority of a garnishee or a requirement to pay</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 22 if you withheld under the authority of a garnishee or a requirement to pay that applies to the employee's previously assessed tax arrears.</p></dd>
+</dl>
+    
+<p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnit.html">About the deduction of income tax</a></p>
+            </details>
+</li>
+
 
 <li class="code-num mrgn-lft-md"><details> <summary >Box 26 – CPP/QPP pensionable earnings </summary>
  <p id="bx_26">Report the <strong>total </strong>amount of pensionable earnings using box 26. This is the amount you used to calculate your employee's <abbr title="Canada Pension Plan">CPP</abbr>/<abbr title="Quebec Pension Plan">QPP</abbr> contributions that you reported using <a href="#bx_16">box 16</a>, <a href="#bx_16a">box 16a</a>, <a href="#bx_17">box 17</a> and <a href="#bx_17a">box 17a</a>, up to the maximum pensionable earnings and additional maximum pensionable earnings for the year.</p>
