--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -292,7 +292,7 @@
             <button class="btn btn-default btn-sm wb-toggle" data-toggle="{&quot;selector&quot;: &quot;details&quot;, &quot;parent&quot;: &quot;#details-elements&quot;, 
                &quot;print&quot;: &quot;on&quot;, &quot;type&quot;: &quot;off&quot;}" type="button">Collapse all</button>
             </div>
-   <h4 class="code-num">Identification </h4>
+   <h4 >Identification </h4>
 
    <li class="code-num mrgn-lft-md">	<details><summary >Year </summary>
             <p id="yr">Enter the 4 digits of the calendar year in which you made the payment to the employee.</p>
@@ -580,7 +580,7 @@
 		</li>
 		
 
-   <h4 class="code-num">Income and source deductions</h4>
+   <h4 >Income and source deductions</h4>
 	
 
 <li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income </summary>
@@ -1080,7 +1080,7 @@
 </li>
 
 
-<h4 class="code-num"><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> </h4>
+<h4 ><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit-sharing plan">DPSP</abbr> </h4>
 
 <li class="code-num mrgn-lft-md">  <details><summary >Box 20 – RPP contributions </summary>
 <p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) using box 20. </p>
@@ -1163,7 +1163,7 @@
             </details>
 </li>
 
-<h4 class="code-num">Union dues or charitable donations</h4>
+<h4 >Union dues or charitable donations</h4>
 <li class="code-num mrgn-lft-md"><details> <summary>Box 44 – Union dues </summary>
             <p id="bx_44"></p>
             <p>Report the amount you deducted from your employee for tax deductible union dues using box 44, only if you and the union agree that the union will not issue receipts for these dues. This includes amounts you paid to a parity or advisory committee that qualify for a deduction. </p>
@@ -1193,7 +1193,7 @@
 		
 
 	
-<h4 class="code-num">Codes - Other information </h4>		
+<h4 >Codes - Other information </h4>		
  
  <li class="code-num mrgn-lft-md"><details><summary>Code 30 – Board and lodging </summary> 
             <p  id="cd_30">Report the total value of the board and lodging benefit you provided to your employee using code 30 <strong>and</strong> <a href="#bx_14_cd_30">box 14</a>.</p>
