--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -586,7 +586,7 @@
 <li class="code-num mrgn-lft-md"> <details>  <summary>Box 14 – Employment income </summary>
             <p id="bx_14">Report your employee's total income before deductions using box 14. </p>
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
- <details> <summary>Type of payment included in employment income </summary>
+ <details> <summary>Type of payments included in employment income </summary>
 <p>Generally, you have to report using box 14 from:</p>
     <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/when/learnit.html#ajax-deduct"></div></p>
            </details>
@@ -610,7 +610,7 @@
 </dd>
 
 <dt>Box 29 - Employment codes</dt>
-<dd> <p><strong>Do not </strong>report income you paid using box 14 if you are using <a href="#bx_29">box 29</a> with the employment code:</p>
+<dd> <p><strong>Do not </strong>report income you paid using box 14 if you are using <a href="#bx_29">box 29</a> with the following employment codes:</p>
 <ul>
 	<li>11 - Placement or employment agency worker, use <a href="#cd_81">code 81</a></li>
 	<li>12 - Taxi drivers and drivers of other passenger-carrying vehicles, use <a href="#cd_82">code 82</a></li>
@@ -646,11 +646,11 @@
 </dd>
 
 <dt>Interest-free and low-interest loans</dt>
-<dd><p id="bx_14_cd_36">Report the value of the taxable benefit from an interest-free or low-interest loan you provided to your employee using <strong>and</strong> <a href="#cd_36">code 36</a>.</p> 
+<dd><p id="bx_14_cd_36">Report the value of the taxable benefit from an interest-free or low-interest loan you provided to your employee using box 14 <strong>and</strong> <a href="#cd_36">code 36</a>.</p> 
 </dd>
 
 <dt>Security options benefits</dt>
-<dd><p id="bx_14_cd_38">Report the total value of the security options taxable benefit you provided to your employee  using <strong>and</strong> <a href="#cd_38">code 38</a>.</p> 
+<dd><p id="bx_14_cd_38">Report the total value of the security options taxable benefit you provided to your employee  using box 14 <strong>and</strong> <a href="#cd_38">code 38</a>.</p> 
 </dd>
 
 <dt>Taxable benefits</dt>
@@ -681,8 +681,12 @@
 <dd><strong>Do not </strong>report any amount using box 14 if you use employment <a href="#outside1" aria-controls="centred-popup" class="wb-lbx" role="button">code 16 - Detached employee – Social security agreement&nbsp;<span class="far fa-question-circle"></span></a> <strong>and no other type of income is reported on the T4 slip</strong>. </dd>
 
 <dt>Employee salary overpayments</dt>
-<dd><p>Report salary overpayments you made to your employees using box 14 if your employee <strong>does not</strong> repay you.</p>
-<p><strong>Do not</strong> report any amount using box 14 if the employee <strong>did not</strong> perform their duties.</p>
+<dd><p>Report the salary overpayment you made to your employee using box 14 if your employee:</p>
+<ul>
+	<li><strong>Does not</strong> repay you</li>
+	<li>Repaid you, but they <strong>did not perform their duties</strong></li>
+</ul>
+<p><strong>Do not</strong> report any amount using box 14 if the employee repaid you but the repayment was because of a clerical, administrative or system error.</p>
 <p>Learn more when on how to make corrections when the employee repays you: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/file-information-returns-slip-summaries/make-corrections-after-filing/correct.html">Make corrections after filing</a></p>
 </dd>
 </dl>   
