--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -473,7 +473,7 @@
 </li>
 <li class="cnjnctn-col"><p>You are a placement or employment agency and:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-           <li class="cnjnctn-col">You placed the worker under your direction and control of one of your clients</li>
+           <li class="cnjnctn-col">You placed the worker under the direction and control of one of your clients</li>
 	 <li class="cnjnctn-col">You pay the worker</li>
    </ul>       
   <p class="mrgn-tp-md"><strong>Do not</strong> use code 11 if you are an agency or the agency's client and the worker is paid self-employment income, use the <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a>.</p>
@@ -500,7 +500,7 @@
 
    <details> <summary>14 -  Withdrawal from a prescribed salary deferral arrangement plan</summary>
             <div id="ajax-defer1">
-            <p id="bx_29_cd_14">Use code 14 if the payment involves prescribed salary deferral plan or arrangement. This includes when you are paying both of the following:</p>
+            <p id="bx_29_cd_14">Use code 14 if the payment involves a prescribed salary deferral plan or arrangement. This includes when you are paying both of the following:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col">Salary to the participant and part of the salary is deferred</li>
 <li class="cnjnctn-col">Paying out the deferred salary to the participant</li>
@@ -998,17 +998,23 @@
 <p>For example, if your employee is on an unpaid leave of absence and you continue to provide benefits during the leave period, report the benefit using box 26.</p>
 </dd>
 
-<dt>Start, stop or restart CPP deductions</dt>
-<dd><p>Report using box 26 in the following situations:</p>
- <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/when/learncpp.html#ajax-stopcppcond"></div></p>
-<p><p><strong>Do not </strong> report using box 26 if you paid your employees and they are not in the above situations. These amounts are not pensionable earnings. You have to report these amounts using box 14.</p>
+<dt>Amounts not to be included in box 26</dt>
+<dd><p><strong>Do not </strong> report using box 26 amounts paid to your employee:</p>
+ <ul> 
+<li>Before and during the month the employee turned 18</li>
+<li>After the month the employee turned 70</li>
+<li>During the months the employee was considered to be disabled under the CPP or QPP</li>
+<li>After an eligible employee, who is 65 to 70 years of age and receiving CPP benefits, gave you a signed copy of Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election, with parts A, B, and C completed</li>
+<li>Before an eligible employee who is 65 to 70 years of age, gave you a signed copy of Form CPT30 with parts A, B, and D completed</li>
+</ul>
+<p>Report these amounts using <a href="#bx_14">box 14</a> even if you do not report them using box 26.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/startstopcpp.html">Employee's life events: Start, stop or restart CPP deductions</a></p>      
 
 </dd>
 
 <dt>Benefits and earnings taxable only in the Quebec</dt>
 <dd><p>Certain taxable benefits and earnings are considered by Revenu Québec to be pensionable earnings for employees working in Quebec.</p>
- <p>Generally, the amount you report using box 26 will be more than the amount you report using box 14 in this situation. The CRA will process the T4 slip even if the amount is not the same.</p>
+ <p>Generally, the amount you report using box 26 will be more than the amount you report using box 14 in this situation. The CRA will process the T4 slip even if box 26 is more than box 14.</p>
            
             <details><summary>Example 1 - Benefit taxable in Quebec - Unpaid leave</summary>
             <p>Marion works for her employer in Quebec and is on an unpaid leave of absence. Her employer pays $750 in premiums to an employer-paid private health benefit plan on her behalf. Since the benefit is not taxable outside of Quebec, it is not income. When preparing Marion's Quebec T4 slip, her employer will leave box 14 blank. Since the premiums are QPP pensionable, her employer will report $750 in box 26, the QPP contributions withheld on the benefit in box 17, and fill in any other boxes on her T4 slip as applicable.</p>
