--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1007,7 +1007,7 @@
 <li>After an eligible employee, who is 65 to 70 years of age and receiving CPP benefits, gave you a signed copy of Form CPT30, Election to Stop Contributing to the Canada Pension Plan, or Revocation of a Prior Election, with parts A, B, and C completed</li>
 <li>Before an eligible employee who is 65 to 70 years of age, gave you a signed copy of Form CPT30 with parts A, B, and D completed</li>
 </ul>
-<p>Report these amounts using <a href="#bx_14">box 14</a> even if you do not report them using box 26.</p>
+<p class="mrgn-tp-md">Report these amounts using <a href="#bx_14">box 14</a> even if you do not report them using box 26.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/startstopcpp.html">Employee's life events: Start, stop or restart CPP deductions</a></p>      
 
 </dd>
