--- a/fhsa/v4/transfersin.html
+++ b/fhsa/v4/transfersin.html
@@ -81,7 +81,9 @@
 		  <h2 id="h-1">What is a direct transfer</h2>
 	<ul class="fa-ul">
 <li><span class="fas fa-check text-success fa-li fa-lg"></span>A <strong>direct transfer</strong> is a transfer completed directly between the financial institutions of the two plans or accounts involved. To complete a direct transfer, you must fill out a transfer form and give it to your financial institution.<ul>
-<li>Financial institutions do not have to use the forms referenced <strong>on this page</strong>. The institution that transfers your amounts may use other types of documents to record the transfer. The institution has to provide you with confirmation of the details of the transfer.</li>
+<div class="alert alert-info">
+	<p>Financial institutions do not have to use the forms referenced <strong>on this page</strong>. The institution that transfers your amounts may use other types of documents to record the transfer. The institution has to provide you with confirmation of the details of the transfer.</p>
+</div>
 </ul>
 </li>
 <li><span class="fas fa-times text-danger fa-li fa-lg"></span>In order to make a direct transfer, <strong>you must not withdraw the property yourself</strong> and contribute it to another one of your plans or accounts. Those transactions would <strong>not</strong> be considered a direct transfer. In that case, the amount that you withdraw from your FHSA will be a taxable withdrawal, which you must report as income when you file your income tax and benefit return for the year of the withdrawal. There may also be other unintended tax consequences for your other plans and accounts.</li>
