--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -554,7 +554,7 @@
 <h3 class="modal-title">Qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="definitions.html#qualinv"></section>
+<section data-ajax-replace="https://test.canada.ca/cra-arc/fhsa/v4/definitions.html#qualinv"></section>
 </div>
 </section>
 
